--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chat_en_temps_reel",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -19,7 +20,10 @@
   },
   "homepage": "https://github.com/bastienggg/Chat_En_Temps_Reel#readme",
   "dependencies": {
+    "@prisma/client": "^6.15.0",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "prisma": "^6.15.0",
     "socket.io": "^4.8.1",
     "twig": "^1.17.1"
   }
