feat: integrate Playwright for end-to-end testing and restructure Socket.IO tests
- Added Playwright as a dependency and configured for E2E tests.
- Created new E2E tests for user flows in `user-flow.e2e.test.js`.
- Moved Socket.IO integration tests to `tests/unit/socketio.test.js`.
- Removed old Socket.IO test file `socketio.test.js`.
- Updated Jest configuration to exclude Playwright tests.
- Added database migration scripts for Message and User tables.
- Updated package.json to include new scripts and dependencies.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,6 @@ jobs:
       - run: npm install
       - run: npx prisma generate
       - run: npx prisma migrate deploy
-      - run: npx jest
+  - run: npx jest
+  - run: npx playwright install --with-deps
+  - run: npx start-server-and-test "npm start" http://localhost:3000 "npm run test:e2e"
