--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:e2e": "npx playwright test",
     "start": "node server.js",
     "build": "prisma generate"
   },
@@ -30,8 +31,11 @@
     "twig": "^1.17.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
+    "jest": "^30.1.3",
     "jest-mock": "^30.0.5",
     "socket.io-client": "^4.8.1",
+    "start-server-and-test": "^2.1.0",
     "supertest": "^7.1.4"
   }
 }
