--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "nodemailer": "^7.0.6",
     "prisma": "^6.15.0",
     "socket.io": "^4.8.1",
     "twig": "^1.17.1"
